--- a/plan_meal.css
+++ b/plan_meal.css
@@ -53,6 +53,7 @@ body {font-family: Arial;}
   border: 1px solid #ccc;
   border-top: none;
   background-color: white;
+  margin-bottom: 5%;
 }
 
 #div1 {
