--- a/plan_meal.css
+++ b/plan_meal.css
@@ -58,16 +58,16 @@ body {font-family: Arial;}
 
 #div1 {
   /* float: left; */
-  width: 100px;
+  width: 350px;
   height: 35px;
   margin: 10px;
-  padding: 10px;
+  padding-top: 10px;
 }
 
 #div2 {
   /* float: left; */
   width: 100px;
-  height: 80px;
+  height: 200px;
   padding: 10px;
 }
 
